# vrachos

./: .drone.yml  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/vrachos/: __init__.py  cli.py  configuration.py  logger.py  ui.py
src/vrachos/core/: _internal.py  io.py
src/vrachos/experimental/: common.py  http_client.py  modelops.py  timestamps.py
tests/: test_template.py
